<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo2" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/navbarDivider"
        app:layout_constraintTop_toBottomOf="@+id/home_chatButton">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/home_scrollLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/home_pickupTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="Upcoming Pickup Matches"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/home_pickupRecycler"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/home_pickupTitle" />

            <TextView
                android:id="@+id/home_noMatchesText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="You have no upcoming matches."
                android:textColor="#000000"
                android:textSize="18sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/home_pickupRecycler" />

            <View
                android:id="@+id/view2"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginTop="20dp"
                android:background="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/home_noMatchesText" />

            <TextView
                android:id="@+id/home_postsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="Posts"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/home_postsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/home_postsTitle" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <ImageButton
        android:id="@+id/home_notificationsBtn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#6200ED"
        android:contentDescription="Notifications Button"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bell_icon"
        app:tint="#FFFFFF" />

    <ImageButton
        android:id="@+id/home_chatButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#6200ED"
        android:contentDescription="Chat Button"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/home_notificationsBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/chat_icon"
        app:tint="#FFFFFF" />

    <ImageView
        android:id="@+id/home_redChat"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="45dp"
        android:layout_marginBottom="42dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/home_chatButton"
        app:layout_constraintStart_toStartOf="@+id/home_chatButton"
        app:srcCompat="@drawable/circle" />

    <ImageView
        android:id="@+id/home_redNotif"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="45dp"
        android:layout_marginBottom="42dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/home_notificationsBtn"
        app:layout_constraintStart_toStartOf="@+id/home_notificationsBtn"
        app:srcCompat="@drawable/circle" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/home_notificationLayout"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_marginStart="411dp"

        android:background="@drawable/shadow_bg"
        android:elevation="101dp"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        app:layout_constraintBottom_toTopOf="@+id/navbarDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/home_notificationView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="#E6EDEDED"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/home_recycleViewNotif"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="5dp"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/home_notificationView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_notificationCloseBtn" />

        <ImageButton
            android:id="@+id/home_notificationCloseBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="#6200EC"
            android:contentDescription="Close Button"
            android:scaleType="fitXY"
            android:src="@drawable/close_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#FFFFFF" />

        <TextView
            android:id="@+id/home_notificationsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="Notifications"
            android:textColor="#000000"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/navbarBg"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="#FFFFFF"
        android:elevation="102dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/navbarDivider"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginBottom="22dp"
        android:background="#4D4E4E"
        android:elevation="102dp"
        app:layout_constraintBottom_toTopOf="@+id/homePageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/homePgIconSelector"
        android:layout_width="45dp"
        android:layout_height="2dp"
        android:layout_marginStart="38dp"
        android:layout_marginBottom="18dp"
        android:background="#6558F5"
        android:elevation="102dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/homePageButton"
        android:layout_width="69dp"
        android:layout_height="56dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="22dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="Home Button"
        android:elevation="102dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_home"
        app:tint="#6558F5" />

    <ImageButton
        android:id="@+id/teamPageButton"
        android:layout_width="69dp"
        android:layout_height="56dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="22dp"
        android:background="#00FFFFFF"
        android:contentDescription="Team Page Button"
        android:elevation="102dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/homePageButton"
        app:srcCompat="@drawable/ic_teams" />

    <ImageButton
        android:id="@+id/profilePageButton"
        android:layout_width="69dp"
        android:layout_height="56dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="22dp"
        android:background="#00FFFFFF"
        android:contentDescription="Profile Page Button"
        android:elevation="102dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/teamPageButton"
        app:srcCompat="@drawable/ic_profile" />

    <ImageButton
        android:id="@+id/settingsPageButton"
        android:layout_width="69dp"
        android:layout_height="56dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="22dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="Settings Page Button"
        android:elevation="102dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/settings"
        app:tint="#4D4E4E" />

    <View
        android:id="@+id/home_fadedBg"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:alpha="0"
        android:background="#272727"
        android:elevation="100dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/navbarBg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>