...
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lobby_friendRequestsBtn" />

    <ImageButton
        android:id="@+id/lobby_removeBtn"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginTop="5dp"
...
